{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 126,
  "lineage": "5037f3ad-a0ab-7ad0-b6ff-0e36921d2e54",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "Site1Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Servers-rg/providers/Microsoft.Network/networkInterfaces/az900-Site1Server-nic",
            "internal_domain_name_suffix": "0vnq5l0ojyaujin30hkblb2koa.gvxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "az900-Site1Server-ipc",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Servers-rg/providers/Microsoft.Network/publicIPAddresses/az900-Site1Server-pip",
                "subnet_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Site1Network-rg/providers/Microsoft.Network/virtualNetworks/az900-Site1-vnet/subnets/az900-Site1Server-sub"
              }
            ],
            "location": "swedencentral",
            "mac_address": "60-45-BD-FB-49-FF",
            "name": "az900-Site1Server-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "az900-Servers-rg",
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Servers-rg/providers/Microsoft.Compute/virtualMachines/az900-Site1Server-vm"
          },
          "dependencies": [
            "azurerm_public_ip.Site1Server",
            "azurerm_resource_group.Servers",
            "azurerm_resource_group.Site1Net",
            "azurerm_subnet.Site1SubSer",
            "azurerm_virtual_network.Site1Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "Site2Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Servers-rg/providers/Microsoft.Network/networkInterfaces/az900-Site2Server-nic",
            "internal_domain_name_suffix": "kknekiq1cswere2ojmiushgktb.milx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "az900-Site2Server-ipc",
                "primary": true,
                "private_ip_address": "172.16.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Servers-rg/providers/Microsoft.Network/publicIPAddresses/az900-Site2Server-pip",
                "subnet_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Site2Network-rg/providers/Microsoft.Network/virtualNetworks/az900-Site2-vnet/subnets/az900-Site2Server-sub"
              }
            ],
            "location": "italynorth",
            "mac_address": "7C-1E-52-1E-B1-B8",
            "name": "az900-Site2Server-nic",
            "private_ip_address": "172.16.0.4",
            "private_ip_addresses": [
              "172.16.0.4"
            ],
            "resource_group_name": "az900-Servers-rg",
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Servers-rg/providers/Microsoft.Compute/virtualMachines/az900-Site2Server-vm"
          },
          "dependencies": [
            "azurerm_public_ip.Site2Server",
            "azurerm_resource_group.Servers",
            "azurerm_resource_group.Site2Net",
            "azurerm_subnet.Site2SubSer",
            "azurerm_virtual_network.Site2Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "Site1Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Servers-rg/providers/Microsoft.Network/networkInterfaces/az900-Site1Server-nic|/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Site1Network-rg/providers/Microsoft.Network/networkSecurityGroups/az900-Site1-nsg",
            "network_interface_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Servers-rg/providers/Microsoft.Network/networkInterfaces/az900-Site1Server-nic",
            "network_security_group_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Site1Network-rg/providers/Microsoft.Network/networkSecurityGroups/az900-Site1-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.Site1Server",
            "azurerm_network_security_group.Site1BSG",
            "azurerm_public_ip.Site1Server",
            "azurerm_resource_group.Servers",
            "azurerm_resource_group.Site1Net",
            "azurerm_subnet.Site1SubSer",
            "azurerm_virtual_network.Site1Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "Site2Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Servers-rg/providers/Microsoft.Network/networkInterfaces/az900-Site2Server-nic|/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Site2Network-rg/providers/Microsoft.Network/networkSecurityGroups/az900-Site2-nsg",
            "network_interface_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Servers-rg/providers/Microsoft.Network/networkInterfaces/az900-Site2Server-nic",
            "network_security_group_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Site2Network-rg/providers/Microsoft.Network/networkSecurityGroups/az900-Site2-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.Site2Server",
            "azurerm_network_security_group.Site2BSG",
            "azurerm_public_ip.Site2Server",
            "azurerm_resource_group.Servers",
            "azurerm_resource_group.Site2Net",
            "azurerm_subnet.Site2SubSer",
            "azurerm_virtual_network.Site2Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Site1BSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Site1Network-rg/providers/Microsoft.Network/networkSecurityGroups/az900-Site1-nsg",
            "location": "swedencentral",
            "name": "az900-Site1-nsg",
            "resource_group_name": "az900-Site1Network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1010,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Site1Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Site2BSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Site2Network-rg/providers/Microsoft.Network/networkSecurityGroups/az900-Site2-nsg",
            "location": "italynorth",
            "name": "az900-Site2-nsg",
            "resource_group_name": "az900-Site2Network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1010,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Site2Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "Site1Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "domain_name_label": "az900-1ite1server",
            "fqdn": "az900-1ite1server.swedencentral.cloudapp.azure.com",
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Servers-rg/providers/Microsoft.Network/publicIPAddresses/az900-Site1Server-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "swedencentral",
            "name": "az900-Site1Server-pip",
            "resource_group_name": "az900-Servers-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_resource_group.Servers",
            "azurerm_resource_group.Site1Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "Site2Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "domain_name_label": "az900-site2server",
            "fqdn": "az900-site2server.italynorth.cloudapp.azure.com",
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Servers-rg/providers/Microsoft.Network/publicIPAddresses/az900-Site2Server-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "italynorth",
            "name": "az900-Site2Server-pip",
            "resource_group_name": "az900-Servers-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_resource_group.Servers",
            "azurerm_resource_group.Site2Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "CoreNetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.10.0.0/24",
            "address_prefixes": [
              "10.10.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-CoreNetwork-rg/providers/Microsoft.Network/virtualNetworks/az900-CoreNetwork-vnet/subnets/az900-CoreNetwork-sub",
            "name": "az900-CoreNetwork-sub",
            "resource_group_name": "az900-CoreNetwork-rg",
            "timeouts": {
            },
            "virtual_network_name": "az900-CoreNetwork-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.CoreNetwork",
            "azurerm_virtual_network.CoreNetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Site1SubSer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Site1Network-rg/providers/Microsoft.Network/virtualNetworks/az900-Site1-vnet/subnets/az900-Site1Server-sub",
            "name": "az900-Site1Server-sub",
            "resource_group_name": "az900-Site1Network-rg",
            "timeouts": {
            },
            "virtual_network_name": "az900-Site1-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.Site1Net",
            "azurerm_virtual_network.Site1Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Site2SubSer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.16.0.0/24",
            "address_prefixes": [
              "172.16.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Site2Network-rg/providers/Microsoft.Network/virtualNetworks/az900-Site2-vnet/subnets/az900-Site2Server-sub",
            "name": "az900-Site2Server-sub",
            "resource_group_name": "az900-Site2Network-rg",
            "timeouts": {
            },
            "virtual_network_name": "az900-Site2-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.Site2Net",
            "azurerm_virtual_network.Site2Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "Site1BSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Site1Network-rg/providers/Microsoft.Network/virtualNetworks/az900-Site1-vnet/subnets/az900-Site1Server-sub",
            "network_security_group_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Site1Network-rg/providers/Microsoft.Network/networkSecurityGroups/az900-Site1-nsg",
            "subnet_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Site1Network-rg/providers/Microsoft.Network/virtualNetworks/az900-Site1-vnet/subnets/az900-Site1Server-sub",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_network_security_group.Site1BSG",
            "azurerm_resource_group.Site1Net",
            "azurerm_subnet.Site1SubSer",
            "azurerm_virtual_network.Site1Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "Site2BSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Site2Network-rg/providers/Microsoft.Network/virtualNetworks/az900-Site2-vnet/subnets/az900-Site2Server-sub",
            "network_security_group_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Site2Network-rg/providers/Microsoft.Network/networkSecurityGroups/az900-Site2-nsg",
            "subnet_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Site2Network-rg/providers/Microsoft.Network/virtualNetworks/az900-Site2-vnet/subnets/az900-Site2Server-sub",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_network_security_group.Site2BSG",
            "azurerm_resource_group.Site2Net",
            "azurerm_subnet.Site2SubSer",
            "azurerm_virtual_network.Site2Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "CoreNetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/21"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "98651619-20d9-4f31-a0a1-7c5314487ea5",
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-CoreNetwork-rg/providers/Microsoft.Network/virtualNetworks/az900-CoreNetwork-vnet",
            "location": "northeurope",
            "name": "az900-CoreNetwork-vnet",
            "resource_group_name": "az900-CoreNetwork-rg",
            "subnet": [
              {
                "address_prefix": "10.10.0.0/24",
                "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-CoreNetwork-rg/providers/Microsoft.Network/virtualNetworks/az900-CoreNetwork-vnet/subnets/az900-CoreNetwork-sub",
                "name": "az900-CoreNetwork-sub"
              }
            ],
            "timeouts": {
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.CoreNetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Site1Net",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/21"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "af0f5bd5-4e4e-4401-a1bd-d1d415878a70",
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Site1Network-rg/providers/Microsoft.Network/virtualNetworks/az900-Site1-vnet",
            "location": "swedencentral",
            "name": "az900-Site1-vnet",
            "resource_group_name": "az900-Site1Network-rg",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Site1Network-rg/providers/Microsoft.Network/virtualNetworks/az900-Site1-vnet/subnets/az900-Site1Server-sub",
                "name": "az900-Site1Server-sub",
                "security_group": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Site1Network-rg/providers/Microsoft.Network/networkSecurityGroups/az900-Site1-nsg"
              }
            ],
            "timeouts": {
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.Site1Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Site2Net",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/21"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "22459a52-141b-48ac-938e-4b11491cca99",
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Site2Network-rg/providers/Microsoft.Network/virtualNetworks/az900-Site2-vnet",
            "location": "italynorth",
            "name": "az900-Site2-vnet",
            "resource_group_name": "az900-Site2Network-rg",
            "subnet": [
              {
                "address_prefix": "172.16.0.0/24",
                "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Site2Network-rg/providers/Microsoft.Network/virtualNetworks/az900-Site2-vnet/subnets/az900-Site2Server-sub",
                "name": "az900-Site2Server-sub",
                "security_group": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az900-Site2Network-rg/providers/Microsoft.Network/networkSecurityGroups/az900-Site2-nsg"
              }
            ],
            "timeouts": {
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.Site2Net"
          ]
        }
      ]
    }
  ]
}